// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";


package pusModelEditorMessages.protobuf;

message Pus140Parameter {
extensions 15 to 115;

  optional ccsds_mal.protobuf.UINTEGER parameterId = 1;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 2;
  optional ccsds_mal.protobuf.STRING currentValue = 3;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeCurrentValue = 4;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeCurrentValue = 5;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeParamId = 6;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeParamId = 7;
  optional ccsds_mal.protobuf.STRING serviceApidName = 8;
  optional ccsds_mal.protobuf.ULONG uniqueId = 9;
  optional ccsds_mal.protobuf.STRING parameterName = 10;
  optional ccsds_mal.protobuf.STRING initialValue = 11;
  optional ccsds_mal.protobuf.UINTEGER status = 12;
  optional ccsds_mal.protobuf.UINTEGER parameterApid = 13;
  optional ccsds_mal.protobuf.STRING parameterApidName = 14;
}
